--- a/wp-content/themes/storefront/assets/sass/app/components/_general.scss
+++ b/wp-content/themes/storefront/assets/sass/app/components/_general.scss
@@ -73,6 +73,9 @@ ul.products {
 
 .responsive-video-container {
 	margin: 40px 0;
+	&:last-child {
+		margin-bottom: 0!important;
+	}
 	.wptuts-video-container {
 	    position: relative;
 	    padding-bottom: 56.25%;
